# krillbuild

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: commands.md  developing.md  devenvs.md  getting-started.md  index.md  mods.md
scripts/: gendocs.py
src/krillbuild/: __init__.py  architectures.py  base.py  compile.py  compiler_loader.py  config.py  data.py  devenv_loader.py  language_loader.py  mod_loader.py  project.py  runner.py  util.py
src/krillbuild/compilers/: clang.py  gcc.py  gpp.py  muslbase.py
src/krillbuild/devenv/: csharpmono.py  muslc.py  muslgo.py  uclibc.py
src/krillbuild/languages/: c.py  cs.py  go.py
src/krillbuild/mods/: encode.py  kiteshield.py  upx.py  zip.py
tests/: test_build.py
