[project]
name = "krillbuild"
version = "0.1.3"
description = "Build static binary variations of architecture, options, and format."
authors = [
    {name = "Jacob Hartman", email = "junyunharold1@gmail.com"},
]
dependencies = [
    "click>=8.1.7",
    "requests>=2.32.3",
    "termcolor>=2.4.0",
    "coloredlogs>=15.0.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MPL 2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
krillbuild = "krillbuild:main"
